eaton.frontend/src/components/list/css/views/_view-related-products.scss
.related-products-component {

  padding: 60px 0;

  &__text {
    padding-left: 15px;
    padding-bottom: 15px;

    h3 {
      margin-bottom: 5px;
    }
  }

  &__card {
    background-color: $color__secondary-gray6;
    padding: 0 15px;
    margin-right: 15px;
    border: 1px solid $color__secondary-gray5;
  }

  &__info {
    padding: 0 15px;

    @include media-tablet-and-up {
      padding: 0 30px;
    }
  }

  &__title {
    padding-top: 30px;
    margin-bottom: 10px;
  }

  &__arrow {
    bottom: 35%;
  }

}

